--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TransportX": "Server=tcp:transportx.database.windows.net,1433;Initial Catalog=transportx;Persist Security Info=False;User ID=transportxadmin;Password=mylove94@n;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "TransportX": "Data Source=Vietanh-PC;Initial Catalog=Demo;Integrated Security=True;TrustServerCertificate=true"
   },
   "JWT": {
     "Key": "0qxpU0N0ko1ke2s08oo8MFsfQK0UzmofeCB7wkeAP3ipCxWU7M",
